# arch-rice

./: .gitignore  .p10k.zsh  .zprofile  .zshrc  README.md  bashrc  install.sh  sync.sh  zshrc
.config/: QtProject.conf  dolphinrc  mimeapps.list
.config/Thunar/: uca.xml
.config/hypr/: hyprlock.conf
.config/nvim/: lazy-lock.json
.config/nvim/lua/config/: options.lua
.config/quickshell/: app_usage.json  shell.qml
.config/quickshell/components/: BluetoothPanel.qml  LauncherPanel.qml
.config/quickshell/components/bar/: MediaWidget.qml  SystemWidget.qml
.config/quickshell/components/bluetooth/: PairedDeviceDelegate.qml
.config/quickshell/components/core/: CircularStat.qml  Notch.qml  PowerBtn.qml
.config/quickshell/components/dashboard/: PowerMenuWidget.qml  SystemStatsWidget.qml
.config/quickshell/components/launcher/: TabButtons.qml
.config/quickshell/components/mangareader/manga_parser/: Cargo.toml
.config/quickshell/scripts/: music_monitor
.config/quickshell/services/: AppService.qml  NetworkService.qml
.config/scripts/music_monitor/src/: main.rs
.config/scripts/sys_monitor/: Cargo.toml
config/hypr/: hyprland.conf
config/quickshell/: app_usage.json  shell.qml.old
config/quickshell/components/: Bar.qml  BluetoothPanel.qml  Dashboard.qml  LauncherPanel.qml  MusicPanel.qml  WallpaperPanel.qml  WifiPanel.qml
config/quickshell/scripts/: sys_monitor
config/quickshell/services/: NetworkService.qml  StateService.qml  WallpaperService.qml
config/scripts/music_monitor/: Cargo.toml
config/swayosd/: style.css
wallpapers/: current
(+37 files in other folders)
