[package]
name = "manga_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] } # Асинхронный движок
reqwest = { version = "0.11", features = ["rustls-tls", "json"] } # HTTP-клиент (притворится браузером)
scraper = "0.18" # Будет вытаскивать данные по CSS-классам
serde = { version = "1.0", features = ["derive"] } # Для работы со структурами данных
serde_json = "1.0" # Превратит данные в JSON для твоего QML
